// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResetPasswordForm stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-md"
  >
    <form
      method="POST"
    >
      <input
        name="token"
        type="hidden"
        value="reset-token-12345"
      />
      <input
        name="email"
        type="hidden"
        value="user@example.com"
      />
      <div
        class="space-y-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="email-display"
          >
            Email address
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1 bg-muted cursor-not-allowed"
            data-slot="input"
            disabled=""
            id="email-display"
            type="email"
            value="user@example.com"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="newPassword"
          >
            New Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="newPassword"
            name="newPassword"
            placeholder="Create a secure password"
            required=""
            type="password"
            value=""
          />
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="confirmPassword"
          >
            Confirm Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="confirmPassword"
            name="confirmPassword"
            placeholder="Confirm your password"
            required=""
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            Reset Password
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordForm stories snapshot > Interactive story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-md"
  >
    <form
      method="POST"
    >
      <input
        name="token"
        type="hidden"
        value="reset-token-12345"
      />
      <input
        name="email"
        type="hidden"
        value="user@example.com"
      />
      <div
        class="space-y-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="email-display"
          >
            Email address
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1 bg-muted cursor-not-allowed"
            data-slot="input"
            disabled=""
            id="email-display"
            type="email"
            value="user@example.com"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="newPassword"
          >
            New Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="newPassword"
            name="newPassword"
            placeholder="Create a secure password"
            required=""
            type="password"
            value=""
          />
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="confirmPassword"
          >
            Confirm Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="confirmPassword"
            name="confirmPassword"
            placeholder="Confirm your password"
            required=""
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            Reset Password
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordForm stories snapshot > WithError story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 max-w-md"
  >
    <form
      method="POST"
    >
      <div
        class="mb-4 p-3 bg-destructive/10 border border-destructive/20 rounded-md"
      >
        <p
          class="text-sm text-destructive"
        >
          Invalid or expired reset token. Please request a new password reset.
        </p>
      </div>
      <input
        name="token"
        type="hidden"
        value="reset-token-12345"
      />
      <input
        name="email"
        type="hidden"
        value="user@example.com"
      />
      <div
        class="space-y-6"
      >
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="email-display"
          >
            Email address
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1 bg-muted cursor-not-allowed"
            data-slot="input"
            disabled=""
            id="email-display"
            type="email"
            value="user@example.com"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="newPassword"
          >
            New Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="newPassword"
            name="newPassword"
            placeholder="Create a secure password"
            required=""
            type="password"
            value=""
          />
          <div
            class="space-y-2"
          >
            <p
              aria-level="4"
              class="text-sm font-medium text-foreground"
              role="heading"
            >
              Password Requirements
            </p>
            <div
              class="space-y-1.5"
            >
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least 8 characters
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one uppercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one lowercase letter
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one number
                </span>
              </div>
              <div
                class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x h-4 w-4 text-muted-foreground"
                  data-testid="x-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                <span>
                  At least one special character
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-foreground"
            for="confirmPassword"
          >
            Confirm Password
          </label>
          <input
            autocomplete="new-password"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-1"
            data-slot="input"
            id="confirmPassword"
            name="confirmPassword"
            placeholder="Confirm your password"
            required=""
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            Reset Password
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
